# AsymmetricDataQualitySensitivity

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: eda_summary.json  profile_t1.txt  profile_t2.txt  profile_t3.txt  split.json
consumers/: agent.py  features.py  ml_pipeline.py  profile.py  schema.py
consumers/prompts/: templates.py
corruption/: __init__.py  library.py
data/: raw_manifest.txt
eval/: baseline_agent.py  gate.py  sweep.py
scripts/: download_olist.py  eda_olist.py  foundry_smoke_test.py  freeze_split.py  load_olist.py  smoke_corruption.py
tests/: test_corruption.py
